{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 1972,
  "lineage": "fad08230-4854-1550-a4ea-7f3c0c5a5922",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb-webapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:114368227931:loadbalancer/app/alb-webapp/ee61a2be5c6c5632",
            "arn_suffix": "app/alb-webapp/ee61a2be5c6c5632",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-webapp-964669991.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:114368227931:loadbalancer/app/alb-webapp/ee61a2be5c6c5632",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-webapp",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0da6f21ba91171c5f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04cc65ab1368f9d0b"
              },
              {
                "subnet_id": "subnet-0d57dd6da284a1e49"
              }
            ],
            "subnets": [
              "subnet-04cc65ab1368f9d0b",
              "subnet-0d57dd6da284a1e49"
            ],
            "tags": {
              "Ambiente": "Medcloud-challenge"
            },
            "tags_all": {
              "Ambiente": "Medcloud-challenge"
            },
            "vpc_id": "vpc-091a7ad89daf85d39",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_internet_gateway.igw-vpc1",
            "aws_security_group.sg-web",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc-webapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:114368227931:listener/app/alb-webapp/ee61a2be5c6c5632/d77514a279d701cc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:114368227931:listener/app/alb-webapp/ee61a2be5c6c5632/d77514a279d701cc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:114368227931:loadbalancer/app/alb-webapp/ee61a2be5c6c5632",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.alb-webapp",
            "aws_internet_gateway.igw-vpc1",
            "aws_security_group.sg-web",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc-webapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:114368227931:listener/app/alb-webapp/ee61a2be5c6c5632/62280eb2646a6985",
            "certificate_arn": "arn:aws:acm:us-east-1:114368227931:certificate/8e59370c-9a17-48a5-9dcf-8576a9519561",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:114368227931:targetgroup/webapp/01d9bd2961eb3601",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:114368227931:listener/app/alb-webapp/ee61a2be5c6c5632/62280eb2646a6985",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:114368227931:loadbalancer/app/alb-webapp/ee61a2be5c6c5632",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.webapp-certificate",
            "aws_acm_certificate_validation.certificate_validation",
            "aws_alb.alb-webapp",
            "aws_lb_target_group.webapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b0dcb5067f052a63",
            "arn": "arn:aws:ec2:us-east-1:114368227931:instance/i-0519e6295f5b83d24",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0519e6295f5b83d24",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "TESTE",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b6b2457db790a381",
            "private_dns": "ip-10-0-1-82.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.82",
            "public_dns": "ec2-18-233-157-243.compute-1.amazonaws.com",
            "public_ip": "18.233.157.243",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-050ad8ec7a81c35b3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-079550406666d292a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04cc65ab1368f9d0b",
            "tags": {
              "Ambiente": "Medcloud-challenge"
            },
            "tags_all": {
              "Ambiente": "Medcloud-challenge"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-079550406666d292a"
            ]
          },
          "dependencies": [
            "aws_db_instance.dblojaonline",
            "aws_security_group.sg-bastion",
            "aws_subnet.public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:114368227931:internet-gateway/igw-0ab06755aa844de51",
            "id": "igw-0ab06755aa844de51",
            "owner_id": "114368227931",
            "vpc_id": "vpc-091a7ad89daf85d39"
          },
          "dependencies": [
            "aws_vpc.vpc-webapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "webapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:114368227931:targetgroup/webapp/01d9bd2961eb3601",
            "arn_suffix": "targetgroup/webapp/01d9bd2961eb3601",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:114368227931:targetgroup/webapp/01d9bd2961eb3601",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "webapp",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-091a7ad89daf85d39"
          },
          "dependencies": [
            "aws_alb.alb-webapp",
            "aws_internet_gateway.igw-vpc1",
            "aws_security_group.sg-web",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc-webapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb-webapp-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:114368227931:route-table/rtb-0a804b1f4cd1fdef7",
            "id": "rtb-0a804b1f4cd1fdef7",
            "owner_id": "114368227931",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Ambiente": "Medcloud-challenge",
              "name": "rtb-webapp-private"
            },
            "tags_all": {
              "Ambiente": "Medcloud-challenge",
              "name": "rtb-webapp-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-091a7ad89daf85d39"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-webapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb-webapp-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:114368227931:route-table/rtb-0e8d798979d77d235",
            "id": "rtb-0e8d798979d77d235",
            "owner_id": "114368227931",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ab06755aa844de51",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Ambiente": "Medcloud-challenge",
              "name": "rtb-webapp-public"
            },
            "tags_all": {
              "Ambiente": "Medcloud-challenge",
              "name": "rtb-webapp-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-091a7ad89daf85d39"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-vpc1",
            "aws_vpc.vpc-webapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c176561373651ba",
            "route_table_id": "rtb-0e8d798979d77d235",
            "subnet_id": "subnet-04cc65ab1368f9d0b"
          },
          "dependencies": [
            "aws_internet_gateway.igw-vpc1",
            "aws_route_table.rtb-webapp-public",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc-webapp"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b717c3c33fd1f49e",
            "route_table_id": "rtb-0e8d798979d77d235",
            "subnet_id": "subnet-0d57dd6da284a1e49"
          },
          "dependencies": [
            "aws_internet_gateway.igw-vpc1",
            "aws_route_table.rtb-webapp-public",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc-webapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060e1008327f2d954",
            "route_table_id": "rtb-0a804b1f4cd1fdef7",
            "subnet_id": "subnet-0c896ba9087d3dc24"
          },
          "dependencies": [
            "aws_route_table.rtb-webapp-private",
            "aws_subnet.private-subnet",
            "aws_vpc.vpc-webapp"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e2b29e10c7bbaba",
            "route_table_id": "rtb-0a804b1f4cd1fdef7",
            "subnet_id": "subnet-0efb1b6325d3ad863"
          },
          "dependencies": [
            "aws_route_table.rtb-webapp-private",
            "aws_subnet.private-subnet",
            "aws_vpc.vpc-webapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:114368227931:security-group/sg-079550406666d292a",
            "description": "Allow Bastion Access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-079550406666d292a",
            "ingress": [
              {
                "cidr_blocks": [
                  "200.192.99.70/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "secgroup-bastion",
            "name_prefix": "",
            "owner_id": "114368227931",
            "revoke_rules_on_delete": false,
            "tags": {
              "Ambiente": "Medcloud-challenge"
            },
            "tags_all": {
              "Ambiente": "Medcloud-challenge"
            },
            "timeouts": null,
            "vpc_id": "vpc-091a7ad89daf85d39"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-webapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:114368227931:security-group/sg-022cc7af6d1d8836f",
            "description": "Allow Database Access traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-022cc7af6d1d8836f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "secgroup-db",
            "name_prefix": "",
            "owner_id": "114368227931",
            "revoke_rules_on_delete": false,
            "tags": {
              "Ambiente": "Medcloud-challenge"
            },
            "tags_all": {
              "Ambiente": "Medcloud-challenge"
            },
            "timeouts": null,
            "vpc_id": "vpc-091a7ad89daf85d39"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-webapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:114368227931:security-group/sg-01a6bc98dccb2cd3d",
            "description": "Allow Container App Access traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01a6bc98dccb2cd3d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "secgroup-ecs",
            "name_prefix": "",
            "owner_id": "114368227931",
            "revoke_rules_on_delete": false,
            "tags": {
              "Ambiente": "Medcloud-challenge"
            },
            "tags_all": {
              "Ambiente": "Medcloud-challenge"
            },
            "timeouts": null,
            "vpc_id": "vpc-091a7ad89daf85d39"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-webapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:114368227931:security-group/sg-0da6f21ba91171c5f",
            "description": "Allow Web Access traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0da6f21ba91171c5f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "secgroup-web",
            "name_prefix": "",
            "owner_id": "114368227931",
            "revoke_rules_on_delete": false,
            "tags": {
              "Ambiente": "Medcloud-challenge"
            },
            "tags_all": {
              "Ambiente": "Medcloud-challenge"
            },
            "timeouts": null,
            "vpc_id": "vpc-091a7ad89daf85d39"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-webapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2193821954",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-079550406666d292a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-bastion",
            "aws_vpc.vpc-webapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "db_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-136989734",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-022cc7af6d1d8836f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-db",
            "aws_vpc.vpc-webapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "db_port-5432",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "",
            "from_port": 5432,
            "id": "sgrule-1738689049",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-022cc7af6d1d8836f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-db",
            "aws_vpc.vpc-webapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2297458926",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-01a6bc98dccb2cd3d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-ecs",
            "aws_vpc.vpc-webapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_port-443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-1983561032",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01a6bc98dccb2cd3d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-ecs",
            "aws_vpc.vpc-webapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_port-8000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 8000,
            "id": "sgrule-3372660812",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01a6bc98dccb2cd3d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-ecs",
            "aws_vpc.vpc-webapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh_port-22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "200.192.99.70/32"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-664214874",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-079550406666d292a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-bastion",
            "aws_vpc.vpc-webapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2961511950",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0da6f21ba91171c5f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-web",
            "aws_vpc.vpc-webapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_port-443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-295517398",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0da6f21ba91171c5f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-web",
            "aws_vpc.vpc-webapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_port-80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-3036508802",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0da6f21ba91171c5f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-web",
            "aws_vpc.vpc-webapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:114368227931:subnet/subnet-0c896ba9087d3dc24",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c896ba9087d3dc24",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "114368227931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Ambiente": "Medcloud-challenge",
              "name": "Subnet-private-1"
            },
            "tags_all": {
              "Ambiente": "Medcloud-challenge",
              "name": "Subnet-private-1"
            },
            "vpc_id": "vpc-091a7ad89daf85d39"
          },
          "dependencies": [
            "aws_vpc.vpc-webapp"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:114368227931:subnet/subnet-0efb1b6325d3ad863",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0efb1b6325d3ad863",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "114368227931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Ambiente": "Medcloud-challenge",
              "name": "Subnet-private-2"
            },
            "tags_all": {
              "Ambiente": "Medcloud-challenge",
              "name": "Subnet-private-2"
            },
            "vpc_id": "vpc-091a7ad89daf85d39"
          },
          "dependencies": [
            "aws_vpc.vpc-webapp"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:114368227931:subnet/subnet-07e0d942235b25d96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e0d942235b25d96",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "114368227931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Ambiente": "Medcloud-challenge",
              "name": "Subnet-private-3"
            },
            "tags_all": {
              "Ambiente": "Medcloud-challenge",
              "name": "Subnet-private-3"
            },
            "vpc_id": "vpc-091a7ad89daf85d39"
          },
          "dependencies": [
            "aws_vpc.vpc-webapp"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:114368227931:subnet/subnet-037aa8af205c05bed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037aa8af205c05bed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "114368227931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Ambiente": "Medcloud-challenge",
              "name": "Subnet-private-4"
            },
            "tags_all": {
              "Ambiente": "Medcloud-challenge",
              "name": "Subnet-private-4"
            },
            "vpc_id": "vpc-091a7ad89daf85d39"
          },
          "dependencies": [
            "aws_vpc.vpc-webapp"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:114368227931:subnet/subnet-09e3fac3cf6fe04f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.14.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e3fac3cf6fe04f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "114368227931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Ambiente": "Medcloud-challenge",
              "name": "Subnet-private-5"
            },
            "tags_all": {
              "Ambiente": "Medcloud-challenge",
              "name": "Subnet-private-5"
            },
            "vpc_id": "vpc-091a7ad89daf85d39"
          },
          "dependencies": [
            "aws_vpc.vpc-webapp"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:114368227931:subnet/subnet-0f8c3081b8d3841fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.15.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8c3081b8d3841fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "114368227931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Ambiente": "Medcloud-challenge",
              "name": "Subnet-private-6"
            },
            "tags_all": {
              "Ambiente": "Medcloud-challenge",
              "name": "Subnet-private-6"
            },
            "vpc_id": "vpc-091a7ad89daf85d39"
          },
          "dependencies": [
            "aws_vpc.vpc-webapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:114368227931:subnet/subnet-04cc65ab1368f9d0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04cc65ab1368f9d0b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "114368227931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Ambiente": "Medcloud-challenge",
              "name": "Subnet-public-1"
            },
            "tags_all": {
              "Ambiente": "Medcloud-challenge",
              "name": "Subnet-public-1"
            },
            "vpc_id": "vpc-091a7ad89daf85d39"
          },
          "dependencies": [
            "aws_vpc.vpc-webapp"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:114368227931:subnet/subnet-0d57dd6da284a1e49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d57dd6da284a1e49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "114368227931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Ambiente": "Medcloud-challenge",
              "name": "Subnet-public-2"
            },
            "tags_all": {
              "Ambiente": "Medcloud-challenge",
              "name": "Subnet-public-2"
            },
            "vpc_id": "vpc-091a7ad89daf85d39"
          },
          "dependencies": [
            "aws_vpc.vpc-webapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-webapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:114368227931:vpc/vpc-091a7ad89daf85d39",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01886a2ffb4feaf7d",
            "default_route_table_id": "rtb-07be0aea8d89d7532",
            "default_security_group_id": "sg-0761d920993c73e97",
            "dhcp_options_id": "dopt-2f7b2155",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-091a7ad89daf85d39",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07be0aea8d89d7532",
            "owner_id": "114368227931",
            "tags": {
              "Ambiente": "Medcloud-challenge",
              "Name": "VPC-Webapp"
            },
            "tags_all": {
              "Ambiente": "Medcloud-challenge",
              "Name": "VPC-Webapp"
            }
          }
        }
      ]
    }
  ]
}